[tool.poetry]
name = "cytobank-uploader"
version = "0.2.1"
description = "\""
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "MPL-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8,<3.11"
boto3 = "^1.24.74"
requests = "^2.28.1"
typer = "^0.6.1"
tqdm = "^4.64.1"
rich = "^12.6.0a2"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
nox = "^2022.8.7"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-coverage = "^0.0"
ipykernel = "^6.15.3"
IProgress = "^0.4"
types-requests = "^2.28.10"
ipython = "^8.5.0"
jupyterlab = "^3.4.7"


[tool.poetry.group.tui]
optional = true

[tool.poetry.group.tui.dependencies]
textual = { git = "https://github.com/Textualize/textual.git", branch = "css", extras = ["dev"] }

[tool.poetry.scripts]
cytobank-uploader = "cytobank_uploader.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
