[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "boto3<2.0.0,>=1.24.74",
    "requests<3.0.0,>=2.28.1",
    "typer<1.0.0,>=0.6.1",
    "tqdm<5.0.0,>=4.64.1",
    "rich<13.0.0,>=12.6.0a2",
    "loguru>=0.7.2",
]
name = "cytobank-uploader"
version = "0.3.0"
description = "\""
readme = "README.md"

[project.scripts]
cytobank-uploader = "cytobank_uploader.cli:app"

[project.optional-dependencies]
tui = [
    "textual>=0.8.2",
]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2024.4.15",
    "ruff>=0.4.10",
    "mppy>=0.3.4",
    "pytest>=8.2.2",
    "pytest-coverage>=0.0",
    "types-requests>=2.32.0.20240602",
]

[tool.pdm.build]
includes = []
